# roboticbase

./: README.md  pyproject.toml  requirements.txt
config/: robot.yaml
docs/: BRINGUP_ORDER.md  FOR_DUMMIES.md  GITHUB_SETUP.md  IPHONE_PHYphox_GYRO_ODOM.md  LIDAR_NOTES.md  ODOMETRY_ROADMAP_THIS_WEEK.md  ROADMAP.md
scripts/: _lidar_filter_cli.py  _odom_common.py  cam0_list_cameras.py  cam1_preview.py  cam2_edges.py  cam3_contours.py  drive_forward_test.py  fusion0_lidar_plus_camera.py  gyro0_phyphox_watch.py  install_pi_basics.sh  lidar_capture_export.py  motor0_import_check.py  motor1_tiny_pulse.py  odom0_watch_encoders.py  odom1_watch_pose.py  odom2_route_drive.py  safety0_lidar_front_gate.py  stage0_system_check.py  stage10_lidar_phone_gyro_odom_drive_map.py  stage1_lidar_raw.py  stage2_lidar_packets.py  stage3_lidar_scan_viewer.py  stage4_lidar_safety_bubble.py  stage5_lidar_edge_map.py  stage6_lidar_room_mapper.py  stage7_lidar_two_scan_forward_test.py  stage8_lidar_odom_mapper.py  stage9_lidar_odom_drive_map.py
src/tcr_minibot/fusion/: lidar_camera_fusion.py
src/tcr_minibot/hardware/: motors.py
src/tcr_minibot/motion/: differential_drive.py
src/tcr_minibot/odometry/: differential_odometry.py  encoder_interface.py  fused_odometry.py  gpio_quadrature.py
src/tcr_minibot/perception/: edge_mapping.py  lidar_filters.py  occupancy_grid.py  point_cloud_export.py  vision_simple.py
src/tcr_minibot/sensors/: camera_c920.py  lidar_ld20.py  phyphox_phone.py
tests/: test_edge_mapping.py  test_ld20_parser.py  test_lidar_filters.py  test_point_cloud_export.py
(+3 files in other folders)
