[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tcr-minibot"
version = "0.1.0"
description = "Starter code for a Raspberry Pi 5 LD20 LiDAR + C920 + Fusion HAT+ mini robot."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pyserial>=3.5",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
vision = ["opencv-python>=4.8"]
dev = ["pytest>=7.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]
